--- a/pytest.ini
+++ b/pytest.ini
@@ -2,11 +2,12 @@
 DJANGO_SETTINGS_MODULE = tests.djangoproject.settings
 addopts =
     --capture=sys
-    --cov=eventsourcing_django
     --cov-report=html
     --cov-report=term
     --cov-report=term-missing
     --cov-report=xml
+    --cov=eventsourcing_django
+    --durations=10
     --junitxml=junit.xml
     --strict-markers
     -vv
