Changed PYTHONPATH to '.' (was using literal '$HOME').

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -183,4 +183,4 @@ jobs:
           POSTGRES_DB: postgres
           POSTGRES_HOST: 127.0.0.1
           POSTGRES_PORT: 5432
-          PYTHONPATH: $HOME
+          PYTHONPATH: .
