--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.8, 3.9, 3.10]
         poetry-version: [1.1.8]
         django-version: [3.0.14, 3.1.13, 3.2.6]
         os: [ubuntu-20.04]
