Changed build matrix to use string versions (avoid Python 3.1 issue).

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,9 +6,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9, 3.10]
-        poetry-version: [1.1.8]
-        django-version: [3.0.14, 3.1.13, 3.2.8]
+        python-version: ["3.8", "3.9", "3.10"]
+        poetry-version: ["1.1.8"]
+        django-version: ["3.0.14", "3.1.13", "3.2.8"]
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     steps:
