Changed tests build matrix to also run with Python 3.10.

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -135,9 +135,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9]
-        poetry-version: [1.1.8]
-        django-version: [3.0.14, 3.1.13, 3.2.6]
+        python-version: ["3.8", "3.9", "3.10"]
+        poetry-version: ["1.1.8"]
+        django-version: ["3.0.14", "3.1.13", "3.2.6"]
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     services:
