Updated pyproject.toml and poetry.lock.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ mypy = "*"
 pre-commit = "*"
 pre-commit-hooks = "*"
 psycopg2-binary = "*"
+pycryptodome = "~3.10.0"
 pytest = "*"
 pytest-cov = "*"
 pytest-django = "*"
