--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,12 +27,12 @@ repos:
         args: ['--config=.flake8']
         additional_dependencies: [flake8-isort, flake8-tidy-imports, flake8-coding, flake8-broken-line, flake8-bugbear]
 
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.0
-    hooks:
-      - id: bandit
-        name: bandit
-        description: 'Bandit is a tool for finding common security issues in Python code'
+#  - repo: https://github.com/PyCQA/bandit
+#    rev: 1.7.0
+#    hooks:
+#      - id: bandit
+#        name: bandit
+#        description: 'Bandit is a tool for finding common security issues in Python code'
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.910
