--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 license = "BSD 3-Clause"
 classifiers = [
     "Development Status :: 3 - Alpha",
+    "Framework :: Django :: 3.0",
+    "Framework :: Django :: 3.1",
     "Framework :: Django :: 3.2",
     "Framework :: Django",
     "License :: OSI Approved :: BSD License",
