--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
         poetry-version: ["1.1.11"]
-        django-version: ["3.0.14", "3.1.13", "3.2.8", "4.0a1"]
+        django-version: ["2.2.24", "3.0.14", "3.1.13", "3.2.8", "4.0a1"]
         os: [ ubuntu-20.04 ]
         exclude:
           - python-version: "3.7"
@@ -34,10 +34,12 @@ jobs:
         run: make install-poetry
       - name: Install packages
         if: steps.cached-dependencies.outputs.cache-hit != 'true'
-        run: make install-packages opts="--no-root"
-      - name: Install Django
-        if: steps.cached-dependencies.outputs.cache-hit != 'true'
-        run: pip install "Django==${{ matrix.django-version }}"
+        run: |
+            poetry remove django
+            make install-packages opts="--no-root"
+            poetry run pip install django==${{ matrix.django-version }}
+            poetry run python -c "import django; print('Django', django.__version__)"
+            poetry run python -c "import psycopg2; print('Psycopg2', psycopg2.__version__)"
 
   lint:
     strategy:
@@ -69,7 +71,7 @@ jobs:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
         poetry-version: ["1.1.11"]
-        django-version: ["3.0.14", "3.1.13", "3.2.8", "4.0a1"]
+        django-version: ["2.2.24", "3.0.14", "3.1.13", "3.2.8", "4.0a1"]
         os: [ubuntu-20.04]
         exclude:
           - python-version: "3.7"
