--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "eventsourcing-django"
-version = "0.1.10"
+version = "0.1.9"
 description = "Python package for eventsourcing with Django."
 authors = [
     "John Bywater <john.bywater@appropriatesoftware.net>",
@@ -8,6 +8,7 @@ authors = [
 license = "BSD 3-Clause"
 classifiers = [
     "Development Status :: 3 - Alpha",
+    "Framework :: Django :: 2.2",
     "Framework :: Django :: 3.0",
     "Framework :: Django :: 3.1",
     "Framework :: Django :: 3.2",
