--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "eventsourcing-django"
-version = "0.1.12"
+version = "0.2.0dev0"
 description = "Python package for eventsourcing with Django."
 authors = [
     "John Bywater <john.bywater@appropriatesoftware.net>",
@@ -29,7 +29,8 @@ include = ["eventsourcing_django/py.typed"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-eventsourcing = { version = "^9.1.0"}
+#eventsourcing = { version = "^9.2.0", extras = ["crypto"] }
+eventsourcing = { git = "https://github.com/pyeventsourcing/eventsourcing.git", branch = "main", extras = ["crypto"], develop = true}
 Django = ">=2.2.24,<5.0"
 
 [tool.poetry.dev-dependencies]
@@ -45,7 +46,7 @@ isort = "*"
 mypy = "*"
 pre-commit = "*"
 pre-commit-hooks = "*"
-psycopg2-binary = "2.8.6"  # 2.9.1 Doesn't work with Django <= 3.0
+psycopg2-binary = "^2.9.1"
 pycryptodome = "~3.10.0"
 pytest = "*"
 pytest-cov = "*"
