--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ isort = "*"
 mypy = "*"
 pre-commit = "*"
 pre-commit-hooks = "*"
-psycopg2-binary = "^2.8.6"
+psycopg2-binary = "2.8.6"
 pycryptodome = "~3.12.0"
 pytest = "*"
 pytest-cov = "*"
