--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /home/runner/.local
-          key: os-${{ matrix.os }}-python-${{ matrix.python-version}}-poetry-${{matrix.poetry-version }}-django-${{ matrix.django-version }}-${{ hashFiles('**/poetry.lock') }}
+          key: os-${{ matrix.os }}-python-${{ matrix.python-version}}-django-${{ matrix.django-version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install and set up Poetry
         if: steps.cached-dependencies.outputs.cache-hit != 'true'
         run: make install-poetry
@@ -46,7 +46,6 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
-        poetry-version: ["1.1.11"]
         django-version: ["3.2.8"]
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
@@ -60,7 +59,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /home/runner/.local
-          key: os-${{ matrix.os }}-python-${{ matrix.python-version}}-poetry-${{matrix.poetry-version }}-django-${{ matrix.django-version }}-${{ hashFiles('**/poetry.lock') }}
+          key: os-${{ matrix.os }}-python-${{ matrix.python-version}}-django-${{ matrix.django-version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Lint
         run: make lint
 
@@ -100,7 +99,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /home/runner/.local
-          key: os-${{ matrix.os }}-python-${{ matrix.python-version}}-poetry-${{matrix.poetry-version }}-django-${{ matrix.django-version }}-${{ hashFiles('**/poetry.lock') }}
+          key: os-${{ matrix.os }}-python-${{ matrix.python-version}}-django-${{ matrix.django-version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Run tests
         run: make test
         env:
