--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ include = ["eventsourcing_django/py.typed"]
 [tool.poetry.dependencies]
 python = "^3.7"
 #eventsourcing = { version = "^9.2.0", extras = ["crypto"] }
-eventsourcing = { git = "https://github.com/pyeventsourcing/eventsourcing.git", branch = "main", extras = ["crypto"], develop = true}
+#eventsourcing = { path = "../eventsourcing/", extras = ["crypto"], develop = true }
+eventsourcing = { git = "https://github.com/pyeventsourcing/eventsourcing.git", branch = "main", extras = ["crypto"]}
 Django = ">=2.2.24,<5.0"
 
 [tool.poetry.dev-dependencies]
