--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "eventsourcing-django"
-version = "0.2.0"
+version = "0.2.1"
 description = "Python package for eventsourcing with Django."
 authors = [
     "John Bywater <john.bywater@appropriatesoftware.net>",
@@ -29,7 +29,7 @@ include = ["eventsourcing_django/py.typed"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-eventsourcing = { version = "~9.2.0", extras = ["crypto"] }
+eventsourcing = { version = "~9.2.3" }
 #eventsourcing = { path = "../eventsourcing/", extras = ["crypto"], develop = true }
 #eventsourcing = { git = "https://github.com/pyeventsourcing/eventsourcing.git", branch = "main", extras = ["crypto"]}
 Django = ">=2.2.24,<5.0"
@@ -48,7 +48,7 @@ mypy = "*"
 pre-commit = "*"
 pre-commit-hooks = "*"
 psycopg2-binary = "2.8.6"
-pycryptodome = "~3.12.0"
+pycryptodome = "~3.14.1"
 pytest = "*"
 pytest-cov = "*"
 pytest-django = "*"
@@ -61,7 +61,7 @@ build-backend = "poetry.core.masonry.api"
 line-length = 88
 target-version = ["py38"]
 include = '\.pyi?$'
-experimental-string-processing = true
+preview = true
 exclude = '''
 /(
     \.git
