--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -61,6 +61,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+        postgres-version: ["12", "13", "14", "15", "16", "17"]
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     services:
