--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -98,8 +98,8 @@ jobs:
       - name: Run tests
         run: make test
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
+          POSTGRES_USER: eventsourcing
+          POSTGRES_PASSWORD: eventsourcing
+          POSTGRES_DB: eventsourcing_django
           POSTGRES_HOST: 127.0.0.1
           POSTGRES_PORT: 5432
