--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -93,8 +93,8 @@ jobs:
         run: |
            PGPASSWORD=postgres psql -c 'CREATE DATABASE eventsourcing_django;' -U postgres -h localhost
            PGPASSWORD=postgres psql -c "CREATE USER eventsourcing WITH PASSWORD 'eventsourcing';" -U postgres -h localhost
-           PGPASSWORD=postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE 'eventsourcing_django' TO eventsourcing;" -U postgres -h localhost
-           PGPASSWORD=postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE 'test_eventsourcing_django' TO eventsourcing;" -U postgres -h localhost
+           PGPASSWORD=postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE eventsourcing_django TO eventsourcing;" -U postgres -h localhost
+           PGPASSWORD=postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE test_eventsourcing_django TO eventsourcing;" -U postgres -h localhost
 #           PGPASSWORD=postgres psql -c "ALTER DATABASE eventsourcing_django OWNER TO eventsourcing;" -U postgres -h localhost
 #           PGPASSWORD=postgres psql eventsourcing_django -c "CREATE SCHEMA myschema AUTHORIZATION eventsourcing" -U postgres -h localhost
       - name: Run tests
