Fixed README.md. Updated package to use eventsourcing 9.3.5, which doesn't depend on database tables having been created when application is constructed. Also reworked discussion in README.md to improve explanation, and include suggestion about putting application environment variables in Django settings file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ include = ["eventsourcing_django/py.typed"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-eventsourcing = { version = "~9.3" }
+eventsourcing = { version = ">=9.3.5,<9.4" }
 #eventsourcing = { path = "../eventsourcing/", extras = ["crypto"], develop = true }
 #eventsourcing = { git = "https://github.com/pyeventsourcing/eventsourcing.git", branch = "main", extras = ["crypto"]}
 
