--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,11 +37,11 @@ eventsourcing = { version = ">=9.3.5,<9.4" }
 
 # Django 4.2 support Python 3.8 -> 3.12
 # Django 5.0 support Python 3.10 -> 3.12
-# Django 5.1 support Python 3.10 -> 3.13
+# Django 5.1 and 5.2 support Python 3.10 -> 3.13
 Django = [
     {version = ">=4.2,<5.0", python = ">=3.8,<3.10"},
     {version = ">=4.2,<5.2", python = ">=3.10,<3.12"},
-    {version = ">=5.1,<5.2", python = ">=3.12,<4.0"},
+    {version = ">=5.1,<6.0", python = ">=3.12,<4.0"},
 ]
 
 [tool.poetry.group.dev.dependencies]
