--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
-        os: [ ubuntu-20.04 ]
+        os: [ runs-on: ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -39,7 +39,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
-        os: [ubuntu-20.04]
+        os: [runs-on: ubuntu-latest]
     runs-on: ${{ matrix.os }}
     needs: prepare
     steps:
@@ -62,7 +62,7 @@ jobs:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
         postgres-version: ["13", "14", "15", "16", "17"]
-        os: [ubuntu-20.04]
+        os: [runs-on: ubuntu-latest]
     runs-on: ${{ matrix.os }}
     services:
       postgres:
