--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ Django = [
     {version = ">=5.1,<5.2", python = ">=3.12,<4.0"},
 ]
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 bandit = "*"
 black = [
     {version = "<=24.8.0", python = "<3.9"},
