--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,8 +7,8 @@ jobs:
       max-parallel: 30
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
-        postgres-version: ["13", "14", "15", "16", "17"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        postgres-version: ["14", "15", "16", "17"]
         os: [ ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     services:
